--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
         <main>
                 <ul>
-                    <li><div id="cv"><a href="https://drive.google.com/file/d/1Co7Ab9S5LtCE4NVJkt7f91uWe6UqATgD/view?usp=sharing" target="_blank"><img src="cv.png" height="100px"></a><br><h3>Curriculum</h3><br><br> My Resume</div></li>
-                    <li><div id="behance"><a href="https://www.behance.net/collection/171546537/UX-by-Henrique-Olson" target="_blank"><img src="behance.png" height="100px"></a><br><h3>Behance Page</h3><br><br>UX/UI<br>Portfolio.</div></li>
+                    <li><div id="cv"><a href="https://drive.google.com/file/d/1Co7Ab9S5LtCE4NVJkt7f91uWe6UqATgD/view?usp=sharing" target="_blank"><img src="cv.png" height="100px"></a><br><h3>Curriculum</h3><br><br>My Resume.</div></li>
+                    <li><div id="behance"><a href="https://www.behance.net/collection/171546537/UX-by-Henrique-Olson" target="_blank"><img src="behance.png" height="100px"></a><br><h3>Behance Page</h3><br><br>UX/UI Portfolio.</div></li>
                    
                     <li><div id="linkedin"><a href="https://www.linkedin.com/in/henriqueolson/" target="_blank"><img src="linkedin.png" height="100px"></a><br><h3>Linkedin Profile</h3><br><br>Professional profile.</div></li>
                     <li><div id="notion"><a href="https://www.notion.so/Henrique-Study-Projects-d844a4b02b6242c197eee618ef41e6b1" target="_blank"><img src="notion.png" height="100px"></a><br><h3>Aela MID Bootcamp</h3><br><br>Study Projects from Aela's<br>Master Interface Design Bootcamp.</div></li>    
