--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-        <title>Henrique Olson - UX/UI Designer</title><link rel="shortcut icon" href="icoh.png"><link rel="stylesheet" type="text/css" href="styleh.css"></style></head>
+        <title>Henrique Olson - Product Designer</title><link rel="shortcut icon" href="icoh.png"><link rel="stylesheet" type="text/css" href="styleh.css"></style></head>
         <body>
            
             <header>
