--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <header>
                <table>
                 <tr><td><div id="logoh"><img src="logoh.png"></td>
-                <td><h1>Henrique dos Santos Olson <br> UX & UI Designer</h1></div></td></tr>
+                <td><h1>Henrique dos Santos Olson <br> Product Designer</h1></div></td></tr>
             </table></header><br><br><br><br><br>
         
 
